--- a/index.html
+++ b/index.html
@@ -88,66 +88,80 @@
 
     .nav-link:hover::after, .nav-link.active::after { width: 100%; }
 
-    /* EFFET YO-YO AUTOMATIQUE (Appel à l'action sans hover) */
+    /* EFFET YO-YO AUTOMATIQUE */
     @keyframes cta-yoyo {
       0%, 100% { 
         transform: scale(1); 
         box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2);
       }
       50% { 
-        transform: scale(1.08); 
-        box-shadow: 0 20px 25px -5px rgba(0, 86, 94, 0.4);
-        background-color: var(--hover-grad);
+        transform: scale(1.05); 
+        box-shadow: 0 20px 25px -5px rgba(0, 86, 94, 0.3);
       }
     }
 
-    /* Animation Robotique Douce au Survol */
-    @keyframes robot-vibration {
-      0% { transform: translateY(-2px) scale(1.1) rotate(0deg); }
-      25% { transform: translateY(-2px) scale(1.1) rotate(0.5deg) translateX(1px); }
-      50% { transform: translateY(-2px) scale(1.1) rotate(-0.5deg) translateX(-1px); }
-      75% { transform: translateY(-2px) scale(1.1) rotate(0.3deg) translateX(0.5px); }
-      100% { transform: translateY(-2px) scale(1.1) rotate(0deg); }
+    /* Animation du reflet métallique au survol */
+    @keyframes shine {
+      from { left: -100%; }
+      to { left: 100%; }
     }
 
-    /* Boutons CTA */
+    /* Boutons CTA - Mise à jour avec Effet Métallique */
     .cta-button {
       position: relative;
-      overflow: hidden;
       background-color: var(--dark);
       color: white;
-      transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+      transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
       z-index: 1;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      border: 2px solid transparent; 
       min-width: 260px;
+      cursor: pointer;
+      overflow: hidden; /* Important pour le reflet */
+    }
+
+    /* Le reflet métallique */
+    .cta-button::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 50%;
+      height: 100%;
+      background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.3) 50%,
+        rgba(255, 255, 255, 0) 100%
+      );
+      transform: skewX(-25deg);
+      transition: none;
+      z-index: 2;
     }
 
     .cta-attention {
       animation: cta-yoyo 3s ease-in-out infinite;
     }
 
-    .cta-button::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(135deg, var(--dark), var(--hover-grad));
-      transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-      z-index: -1;
+    /* État au passage de la souris : Remplissage + Reflet Métallique */
+    .cta-button:hover {
+      transform: scale(1.08);
+      border-color: var(--accent);
+      background-color: var(--hover-grad);
+      box-shadow: 0 20px 40px -10px rgba(0, 86, 94, 0.4);
+      animation: none; 
     }
 
-    .cta-button:hover::before { left: 0; }
-    
-    .cta-button:hover {
-      transform: translateY(-2px) scale(1.1);
-      box-shadow: 0 25px 50px -12px rgba(0, 86, 94, 0.6);
-      background-color: var(--hover-grad);
-      animation: robot-vibration 0.4s ease infinite;
+    .cta-button:hover::after {
+      animation: shine 0.7s ease-in-out;
+    }
+
+    /* Liseré spécifique pour le bouton Lancer l'app dans la nav */
+    .nav-cta-highlight {
+      border: 2px solid rgba(255, 255, 255, 0.4) !important;
+      box-shadow: 0 0 15px rgba(43, 167, 194, 0.3);
     }
 
     /* Cartes */
@@ -163,7 +177,6 @@
       transform: translateY(-10px);
       box-shadow: 0 40px 70px -20px rgba(0, 86, 94, 0.15);
       border-color: var(--dark);
-      animation: none; 
     }
 
     .status-half-circle {
@@ -244,7 +257,7 @@
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
 
-    /* Mode Immersion */
+    /* Mode Immersion Spécifique */
     #page-demo.active {
       display: flex;
       flex-direction: column;
@@ -330,7 +343,8 @@
         </div>
 
         <div class="flex items-center gap-4">
-          <button onclick="window.open('https://nova360.app.codinsight.app/', '_blank')" class="cta-button cta-attention !min-w-0 text-[9px] font-black px-8 py-3 rounded-full uppercase tracking-widest shadow-lg text-white">
+          <!-- BOUTON AVEC LISERÉ (nav-cta-highlight) ET EFFET MÉTALLIQUE AU SURVOL -->
+          <button onclick="window.open('https://nova360.app.codinsight.app/', '_blank')" class="cta-button cta-attention nav-cta-highlight !min-w-0 text-[9px] font-black px-8 py-3 rounded-full uppercase tracking-widest shadow-lg text-white">
             Lancer l'App
           </button>
           <button id="mobile-menu-btn" class="md:hidden text-white text-2xl" onclick="toggleMobileMenu()">☰</button>
@@ -449,7 +463,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Lien réseaux sociaux</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Plan</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=restaurants', '_blank')">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -461,7 +475,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#315a97]"></span> Lien réseaux sociaux</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#315a97]"></span> Immersion assurée</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=activit%C3%A9s', '_blank')">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -473,7 +487,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Airbnb, Booking</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Fichiers PDF</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=h%C3%A9bergements', '_blank')">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -485,7 +499,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Mise en avant produits</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Visibilité boostée</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=shopping', '_blank')">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -497,7 +511,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Écoles</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Immobilier Pro</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=professionnels', '_blank')">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
           </div>
           <div class="feature-card p-10 rounded-3xl flex flex-col group">
             <div class="status-half-circle"></div>
@@ -509,7 +523,7 @@
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Immersion assurée</li>
               <li class="flex items-center gap-3"><span class="w-1.5 h-1.5 bg-[#00565e]"></span> Plusieurs langues disponibles</li>
             </ul>
-            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full" onclick="window.open('https://nova360.app.codinsight.app/?category=tourisme', '_blank')">VISITER</button>
+            <button class="cta-button py-4 rounded-xl mt-auto font-black text-[10px] tracking-widest text-white !min-w-0 w-full">VISITER</button>
           </div>
         </div>
       </section>
@@ -623,7 +637,6 @@
       </section>
     </main>
 
-    <!-- FOOTER HARMONISÉ -->
     <footer id="main-footer" class="py-12 bg-[#00565e] border-t border-white/10 shadow-[0_-10px_30px_-10px_rgba(0,86,94,0.4)]">
       <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-[9px] uppercase tracking-widest text-white/50">
         <div class="flex items-center gap-6 mb-6 md:mb-0">
